--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
 
 :root {
     --vermelho-playify: #FF005C;
-    --laranja-gamifica: #f06638;
+    --vermelho-playify-escuro: #BF113F;
+    --roxo-playify: #3137C0;
+    --azul-playify: #090F48;
 }
 
 * {
@@ -36,7 +38,7 @@ html {
 
     background: rgb(5, 7, 59);
     background: linear-gradient(135deg, rgba(5, 7, 59, 1) 31%, rgba(0, 6, 165, 1) 100%);
-    
+
 }
 
 header {
@@ -47,7 +49,7 @@ header {
 header div.container-grid {
     /* Porcentagem - Unidade relativa ao elemento pai */
     height: 100%;
-    
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -95,6 +97,7 @@ header div.container-grid {
     flex-direction: column;
     justify-content: space-between;
     height: 300px;
+    gap: 80px;
 }
 
 .conteudo-banner p {
@@ -108,29 +111,84 @@ header div.container-grid {
     color: white;
 
     font-family: "Kdam Thmor Pro";
-    font-size: 26px;
+    font-size: 40px;
 }
 
+.conteudo-banner span {
+    color: var(--vermelho-playify);
+}
+
+
 .banner img {
-    width: 600px;
-    height: 565px;
+    width: 792px;
+    height: 660px;
 }
 
 .alinhamento button {
-    width: 90%;
-    height: 40px;
+    width: 45%;
+    height: 50px;
+    
+    background-color: transparent;
+    
+    border: 5px solid var(--vermelho-playify);
+    border-radius: 50px;
+    text-transform: uppercase;
 
-    border: 5px;
-    border-radius: 4px;
-    border-color: var(--vermelho-playify);
-    background-color: none;
-
-    color: white;
-
-    font-family: 'Montserrat';
-    font-size: 17px;
-    font-weight: 60;
-
-    cursor: pointer;
+    font-family: "Kdam Thmor Pro";
+    color: var(--vermelho-playify);
+    
 }
 
+#sobre img {
+    width: 600px;
+    height: 450px;
+
+    display: block;
+
+    overflow: hidden;
+
+    border-right: 23px solid var(--vermelho-playify-escuro);
+    white-space: nowrap;
+}
+
+
+#sobre {
+    width: 100%;
+    height: 1181;
+    background-color: var(--azul-playify);
+}
+
+#sobre .container-sobre {
+    display: flex;
+    justify-content: space-between;
+
+    padding-bottom: 232px;
+    padding-top: 241px;
+    padding-left: 261px;
+    padding-right: 261px;
+}
+
+#sobre .conteudo-sobre {
+    background-color: var(--roxo-playify);
+
+    width: 1050px;
+    height: 706.71px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 200px;
+}
+
+#sobre h2 {
+    font-family: "Kdam Thmor Pro";
+    font-size: 24px;
+    color: white;
+}
+
+#sobre p {
+    color: white;
+
+    font-family: "MADE Tommy";
+    font-size: 20px;
+}
