--- a/style.css
+++ b/style.css
@@ -199,9 +199,17 @@ header div.container-grid {
 }
 
 
+#cases {
+    background-image: url(img/bolinhas.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+
+    background-size: cover;
+}
+
+
 #cases p {
     text-align: center;
-    background-color: var(--azul-playify);
 
     font-size: 30px;
     font-family: "Kdam Thmor Pro";
@@ -220,7 +228,6 @@ header div.container-grid {
 
     padding: 230px;
     padding-top: 120px;
-    background-color: var(--azul-playify);
 }
 
 .card {
@@ -232,8 +239,10 @@ header div.container-grid {
     justify-content: space-between;
     align-items: center;
 
-    background-color: transparent;
+    background-color: #232f9c40;
     backdrop-filter: blur(10px);
+    border-radius: 20px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
     padding-bottom: 20px;
     margin-bottom: 20px;
@@ -253,34 +262,138 @@ header div.container-grid {
 .card h2 {
     text-align: center;
 
-    font-family: 'MADE Tommy';
+    font-family: 'Kdam Thmor Pro';
     font-size: 24px;
+    font-weight: 100;
 
     padding-bottom: 50px;
-
     color: white;
 }
 
-.card button {
-    width: 90%;
+
+
+#contato {
+    background-color: #090F48;
+    display: flex;
+    justify-content: space-between;
+
+    padding-top: 280px;
+    padding-right: 270px;
+}
+
+#contato h2 {
+    color: #fff;
+    font-size: 30px;
+    font-family: 'Kdam Thmor Pro';
+}
+
+#contato img {
+    width: 830px;
+    height: 810px;
+
+}
+
+
+#contato form {
+    margin: 0 auto;
+    padding: 60px 0;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    border-radius: 80px;
+
+    background-color: var(--roxo-gamifica);
+    color: #fff;
+    font-family: "Montserrat";
+}
+
+#contato form label {
+    margin-bottom: 15px;
+    font-size: 17px;
+}
+
+.campo {
+    width: 60%;
+    margin-bottom: 50px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.campo input {
     height: 40px;
 
-    background-color: var(--roxo-playify);
+    color: #fff;
+    background-color: #351868;
 
     border: none;
     border-radius: 4px;
 
-    color: white;
+    outline: none;
+    text-indent: 10px;
 
-    font-family: 'MADE Tommy';
+    font-family: "Montserrat";
+    font-size: 17px;
+
+
+}
+
+.campo-textarea {
+    width: 60%;
+    margin-bottom: 30px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.campo-textarea textarea {
+    color: white;
+    background-color: #351868;
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+
+    font-family: "Montserrat";
+    font-size: 17px;
+    outline: none;
+    resize: none;
+}
+
+
+.campo input:focus,
+.campo-textarea textarea:focus {
+    outline: 2px solid var(--laranja-gamifica);
+}
+
+#contato form button {
+    height: 40px;
+    width: 60%;
+
+    font-family: "Montserrat";
     font-size: 17px;
     font-weight: 600;
 
-    cursor: pointer;
+    color: white;
+    background-color: #f06638;
 
-    transition: background-color 500ms;
+    border: none;
+    border-radius: 4px;
+    text-transform: uppercase;
+
+    cursor: pointer;
+    transition: background-color 500ms
 }
 
-.card button:hover {
+#contato form button:hover {
     background-color: #ad4929;
 }
+
+#contato form input::placeholder,
+#contato form textarea::placeholder {
+    color: #b9b9b9;
+}
+
