--- a/style.css
+++ b/style.css
@@ -134,35 +134,25 @@ header div.container-grid {
 
 #sobre {
     width: 100%;
-    height: 1181;
     background-color: var(--azul-playify);
 
-    padding-bottom: 232px;
-    padding-top: 241px;
-    padding-left: 350px;
-    padding-right: 200px;
+    padding: 200px;
 }
 
 #sobre img {
-    width: 600px;
-    height: 398px;
     position: absolute;
-
-    top: 1055px;
-    left: 180px;
-
-    display: block;
-
-    overflow: hidden;
-
     border-right: 23px solid var(--vermelho-playify-escuro);
     white-space: nowrap;
-    margin-right: -50px;
+    top: 15%;
+    width: 50%;
+    height: 70%;
+    right: 60%;
 
     border-radius: 15px;
 }
 
 #sobre .container-sobre {
+    position: relative;
     display: flex;
     justify-content: space-between;
 }
@@ -170,16 +160,13 @@ header div.container-grid {
 #sobre .conteudo-sobre {
     background-color: var(--roxo-playify);
 
-    width: 1250px;
-    height: 550px;
-
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    padding-left: 500px;
-    padding-right: 60px;
-    gap: 30px;
+    padding: 150px;
+    padding-right: 80px;
 
+    gap: 30px;
+    text-align: right;
     border-radius: 15px;
 }
 
@@ -196,6 +183,8 @@ header div.container-grid {
     font-family: "MADE Tommy";
     font-size: 24px;
     font-weight: 100;
+    margin-left: 40%;
+    text-align: justify;
 }
 
 #cases {
@@ -276,7 +265,7 @@ header div.container-grid {
     background-color: #232f9c40;
     backdrop-filter: blur(10px);
     border-radius: 20px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.292);
 
     padding-bottom: 20px;
     margin-bottom: 20px;
@@ -326,19 +315,15 @@ header div.container-grid {
     font-size: 35px;
     font-family: 'Kdam Thmor Pro';
     font-weight: 100;
-    margin-left: 70px;
 }
 
 #contato img {
     width: 730px;
-    height: 710px;
-
     margin-left: 80px;
 }
 
 
 #contato form {
-    width: 120%;
     border-radius: 80px;
 
     background-color: var(--roxo-gamifica);
@@ -407,7 +392,7 @@ header div.container-grid {
 
 .campo input:focus,
 .campo-textarea textarea:focus {
-    outline: 2px solid var(--laranja-gamifica);
+    outline: 5px solid #010338;
 }
 
 #contato form button {
@@ -550,11 +535,9 @@ footer svg:hover {
 
     #sobre img {
         position: absolute;
-        top: 113%;
-        left: 100px;
-        height: 72.5%;
+        top: 100%;
     }
-   
+
 
     #cases .container-cards {
         padding: 100px;
@@ -566,9 +549,7 @@ footer svg:hover {
         width: 25%;
     }
 
-    #contato img {
-        margin-left: 0;
-    }
+
 }
 
 @media screen and (max-width: 1200px) {
@@ -577,25 +558,30 @@ footer svg:hover {
     }
 
     .alinhamento img {
-        width: 550px;
-        height: 485px;
-        margin-right: -40px;
+        max-width: 100%;
+        width: 65%;
+        margin-right: -10%;
     }
 
     .conteudo-banner h2 {
-        font-size: 30px;
+        font-size: 35px;
     }
 
     #sobre {
         padding: 100px;
     }
 
+    #sobre .conteudo-sobre {
+        padding-left: 48%;
+    }
+
     #sobre img {
         position: absolute;
-        top: 115.4%;
+        top: 113%;
         left: 100px;
-        height: 85.2%;
-        width: 46%;
+        height: 72%;
+        width: 45%;
+        max-width: 100%;
     }
 
     #sobre h2 {
@@ -606,5 +592,61 @@ footer svg:hover {
     #sobre p {
         font-size: 20px;
         padding-left: 108px;
+    }
+
+}
+
+@media screen and (max-width: 1100px) {
+    nav.menu {
+        width: 55%;
+    }
+
+    #sobre {
+
+    }
+
+    #sobre img {
+        width: 50%;
+    }
+
+    #cases .card {
+        width: 70%;
+    }
+
+    #contato {
+        position: relative;
+
+        flex-direction: column;
+        align-items: center;
+        padding-right: 0px;
+    }
+
+    #contato .conteudo-contato {
+        position: absolute;
+        width: 60%;
+        top: 120px;
+    }
+
+    #contato h2 {
+        font-size: 50px;
+    }
+
+    #contato form {
+        padding: 60px;
+
+        background-color: #232f9c40;
+        backdrop-filter: blur(15px);
+        border-radius: 20px;
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.647);
+        
+    }
+
+    #contato img {
+        width: 80%;
+    }
+
+    #contato .campo, .campo-textarea {
+        width: 100%;
+        margin-bottom: 15%;
     }
 }
