feat: terminamos a responsividade do site até 700px

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
     --vermelho-playify-escuro: #BF113F;
     --roxo-playify: #3137C0;
     --azul-playify: #090F48;
+    --azul-escuro: #040025;
 }
 
 * {
@@ -44,6 +45,10 @@ html {
 header {
     height: 165px;
 
+}
+
+header button {
+    display: none;
 }
 
 header div.container-grid {
@@ -95,6 +100,13 @@ header div.container-grid {
 
 }
 
+.alinhamento img {
+    position: absolute;
+    width: 45%;
+    bottom: 0;
+    left: 45%;
+}
+
 .conteudo-banner {
     height: 300px;
     padding-top: 50px;
@@ -106,6 +118,7 @@ header div.container-grid {
     justify-content: space-between;
     height: 80px;
     gap: 90px;
+    z-index: 1;
 }
 
 .conteudo-banner p {
@@ -127,16 +140,16 @@ header div.container-grid {
 }
 
 
-.banner img {
-    width: 710px;
-    height: 580px;
-}
-
 #sobre {
+    position: relative;
     width: 100%;
     background-color: var(--azul-playify);
-
     padding: 200px;
+}
+
+#sobre .container-sobre {
+    position: relative;
+    margin-left: 100px;
 }
 
 #sobre img {
@@ -151,23 +164,21 @@ header div.container-grid {
     border-radius: 15px;
 }
 
-#sobre .container-sobre {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-}
 
 #sobre .conteudo-sobre {
     background-color: var(--roxo-playify);
 
+    padding: 150px;
+    padding-right: 70px;
+    border-radius: 15px;
+}
+
+#sobre .texto-sobre {
+    text-align: center;
     display: flex;
     flex-direction: column;
-    padding: 150px;
-    padding-right: 80px;
-
+    margin-left: 40%;
     gap: 30px;
-    text-align: right;
-    border-radius: 15px;
 }
 
 #sobre h2 {
@@ -183,7 +194,6 @@ header div.container-grid {
     font-family: "MADE Tommy";
     font-size: 24px;
     font-weight: 100;
-    margin-left: 40%;
     text-align: justify;
 }
 
@@ -193,70 +203,32 @@ header div.container-grid {
 }
 
 
-/* 
-.paralax {
-    height: 100vh;
-    overflow-x: hidden;
-    position: relative;
-    background-color: #05073B;
-}
-
-.background-paralax {
-    background-image: url(img/bolinhas.svg);
-
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-
-    /* background-repeat: no-repeat;
-    height: 100%;
-
-    animation: rotateBackground 20s linear infinite;
-}
-
-@keyframes rotateBackground {
-    from {
-        transform: rotate(0deg);
-    }
-
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.conteudo-paralax {
-    position: absolute;
-    top: 0;
-}
- */
-
-
 #cases p {
     text-align: center;
 
-    font-size: 30px;
+    font-size: 40px;
     font-family: "Kdam Thmor Pro";
     color: white;
 
-    padding-top: 100px;
+    padding-top: 150px;
 
 
 }
 
 .container-cards {
     width: 100%;
+    gap: 100px;
 
     display: flex;
     justify-content: space-between;
 
-    padding: 230px;
-    padding-top: 120px;
+    padding: 150px;
+    overflow-x: auto;
+    flex-basis: unset;
 }
 
 .card {
-    height: 400px;
-    width: 250px;
-
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -266,33 +238,26 @@ header div.container-grid {
     backdrop-filter: blur(10px);
     border-radius: 20px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.292);
-
-    padding-bottom: 20px;
-    margin-bottom: 20px;
-
-    border-radius: 22px;
-
+    
 }
 
 .card img {
-    height: 67%;
-    width: 100%;
-
+    width: 300px;
     border-radius: 38px;
-    padding: 20px;
+    padding: 30px;
+    flex-shrink: 0;
 }
 
 .card h2 {
     text-align: center;
 
     font-family: 'Kdam Thmor Pro';
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 100;
 
-    padding-bottom: 50px;
+    padding: 40px;
     color: white;
 }
-
 
 
 #contato {
@@ -301,10 +266,12 @@ header div.container-grid {
     justify-content: space-between;
 
     padding-top: 200px;
-    padding-right: 270px;
+    padding-right: 120px;
+    gap: 60px;
 }
 
 #contato .conteudo-contato {
+    width: 100%;
     text-align: center;
 }
 
@@ -348,7 +315,7 @@ header div.container-grid {
 }
 
 .campo input {
-    height: 50px;
+    height: 65px;
 
     color: #2f2f2f;
     background-color: #F1F1FD;
@@ -362,33 +329,6 @@ header div.container-grid {
     font-family: "MADE Tommy";
     font-size: 20px;
 }
-
-.campo-textarea {
-    width: 100%;
-    margin-bottom: 30px;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-
-
-}
-
-.campo-textarea textarea {
-    color: #2f2f2f;
-    background-color: #F1F1FD;
-    border: none;
-    border-radius: 30px;
-    padding: 10px;
-
-    font-family: "MADE Tommy";
-    font-size: 20px;
-    outline: none;
-    resize: none;
-    text-indent: 17px;
-    height: 50px;
-}
-
 
 .campo input:focus,
 .campo-textarea textarea:focus {
@@ -396,12 +336,12 @@ header div.container-grid {
 }
 
 #contato form button {
-    height: 40px;
+    height: 60px;
     width: 40%;
 
     font-family: "MADE Tommy";
-    font-size: 17px;
-    font-weight: 600;
+    font-size: 20px;
+    font-weight: 100;
 
     color: white;
     background-color: #4587BF;
@@ -463,154 +403,104 @@ footer svg:hover {
     color: var(--vermelho-playify-escuro);
 }
 
-@media screen and (max-width: 1500px) {
-    .banner img {
-        width: 650px;
-        height: 600px;
-    }
-
-    .conteudo-banner {
-        padding-top: 70px;
-    }
-
-    #sobre {
-        padding: 150px;
-    }
-
-    #sobre img {
-        position: absolute;
-        top: 119.8%;
-        left: 150px;
-        height: 72%;
-    }
-
-    .conteudo-sobre h2 {
-        padding-left: 150px;
-        padding-bottom: 20px;
-        padding-top: 65px;
-    }
-
-    .container-sobre p {
-        padding-left: 155px;
-        padding-bottom: 75px;
-    }
-}
-
-
-
 @media screen and (max-width:1400px) {
-    .conteudo-banner h2 {
-        font-size: 35px;
-    }
-
-    #sobre h2 {
-        font-size: 28px;
-    }
-
-    #sobre p {
-        font-size: 22px;
-    }
-}
-
-
-
-
-@media screen and (max-width: 1300px) {
-    .alinhamento img {
-        width: 60%;
-    }
-
-    .conteudo-banner p {
-        font-size: 20px;
-    }
-
-    .conteudo-banner h2 {
-        font-size: 35px;
-    }
-
-
-    #sobre {
-        padding: 100px;
-    }
-
-    #sobre img {
-        position: absolute;
-        top: 100%;
-    }
-
-
-    #cases .container-cards {
-        padding: 100px;
-        gap: 50px;
-        padding-bottom: 15%;
-    }
-
-    .card {
-        width: 25%;
-    }
-
-
-}
-
-@media screen and (max-width: 1200px) {
-    nav.menu {
-        width: 600px;
-    }
-
-    .alinhamento img {
-        max-width: 100%;
-        width: 65%;
-        margin-right: -10%;
-    }
-
-    .conteudo-banner h2 {
-        font-size: 35px;
-    }
-
-    #sobre {
-        padding: 100px;
-    }
-
-    #sobre .conteudo-sobre {
-        padding-left: 48%;
-    }
-
-    #sobre img {
-        position: absolute;
-        top: 113%;
-        left: 100px;
-        height: 72%;
-        width: 45%;
-        max-width: 100%;
-    }
-
-    #sobre h2 {
-        font-size: 24px;
-        padding-left: 108px;
-    }
-
-    #sobre p {
-        font-size: 20px;
-        padding-left: 108px;
-    }
-
-}
-
-@media screen and (max-width: 1100px) {
     nav.menu {
         width: 55%;
     }
 
-    #sobre {
-
-    }
-
-    #sobre img {
+    .alinhamento img {
         width: 50%;
     }
 
-    #cases .card {
-        width: 70%;
+    #sobre {
+        padding: 130px;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    header button {
+        width: 50px;
+
+        display: unset;
+        background: none;
+        border: none;
+        border-radius: 10px;
+
+    }
+
+    header svg {
+        fill: white;
+    }
+
+    nav.menu {
+        height: 400px;
+        width: 350px;
+
+        padding: 0px 50px;
+
+        flex-direction: column;
+        justify-content: space-around;
+
+        background-color: var(--azul-escuro);
+
+        position: absolute;
+        top: 165px;
+        right: 0px;
+        z-index: 1;
+        display: none;
+
+    }
+  
+    #sobre {
+        padding: 100px;
+    }
+
+    .container-cards {
+        padding: 100px;
+    }
+
+    #contato img {
+        margin: 0;
+    }
+
+}
+
+@media screen and (max-width: 1200px) {
+
+    #sobre .conteudo-sobre {
+        padding: 100px;
+        padding-right: 45px;
+    }
+
+    #contato img {
+        position: relative;
+        right: 15%;
+    }
+
+    #contato .conteudo-contato {
+        position: absolute;
+        width: 40%;
+        right: 10%;
+    }
+}
+
+@media screen and (max-width: 1100px) {
+    .alinhamento img {
+       width: 55%;
+    }
+
+
+    #sobre .conteudo-sobre {
+        padding: 60px;
+        padding-right: 30px;
+    }
+
+    #sobre h2 {
+        font-size: 25px;
+    }
+
+    #sobre p {
+        font-size: 20px;
     }
 
     #contato {
@@ -621,14 +511,20 @@ footer svg:hover {
         padding-right: 0px;
     }
 
+    #contato form {
+        margin-top: 50px;
+    }
+
     #contato .conteudo-contato {
         position: absolute;
         width: 60%;
-        top: 120px;
+        top: 50px;
+        right: 20%;
     }
 
     #contato h2 {
         font-size: 50px;
+        margin-top: 40px;
     }
 
     #contato form {
@@ -643,10 +539,146 @@ footer svg:hover {
 
     #contato img {
         width: 80%;
+        right: 0;
+     
     }
 
     #contato .campo, .campo-textarea {
         width: 100%;
         margin-bottom: 15%;
+    }
+
+    @media screen and (max-width:1000px) {
+        .alinhamento img {
+            width: 70%;
+            left: 17%;
+            opacity: 40%;
+        }
+
+        #sobre {
+            padding: 50px;
+        }
+
+        #sobre .conteudo-sobre {
+            padding: 80px;
+            padding-right: 40px;
+        }
+    }
+
+    @media screen and (max-width: 900px) {
+        .banner h2 {
+            font-size: 55px;
+            align-items: center;
+        }
+
+        .alinhamento img {
+            width: 80%;
+            left: 11%;
+            opacity: 30%;
+        }
+
+        .alinhamento {
+            justify-content: center;
+        }
+
+        .conteudo-banner p {
+            font-size: 28px;
+            text-align: center;
+        }
+
+        .conteudo-banner h2 {
+            text-align: center;
+        }
+
+
+        #sobre .container-sobre {
+            padding: 0;
+            margin-left: 0;
+        }
+
+        #sobre .conteudo-sobre {
+            padding: 60px;
+        }
+
+        #sobre {
+            padding: 60px;
+        }
+
+        #sobre .texto-sobre {
+            margin-left: 55%;
+            margin-right: -5%;
+        }
+
+        #sobre h2 {
+            font-size: 20px;
+        }
+
+        #sobre p {
+            font-size: 17px;
+        }
+
+        #sobre img {
+            top: 0;
+            right: 50%;
+            height: 100%;
+        }
+
+        #cases p {
+            font-size: 30px;
+        }
+
+        #contato img {
+            width: 100%;
+        }
+
+        .redes-sociais {
+            width: 40%;
+        }
+    }
+
+    @media screen and (max-width: 700px) {
+        #sobre {
+            padding: 0;
+        }
+        #sobre .container-sobre {
+            display: flex;
+            flex-direction: column;
+        }
+
+        #sobre .conteudo-sobre {
+            background-color: transparent;
+        }
+    }
+
+    @media screen and (max-width: 700px) {
+        #sobre img {
+            height: 75%;
+            top: 65px;
+        }
+
+        #contato {
+            gap: 40px;
+        }
+
+        #contato .conteudo-contato {
+            width: 80%;
+            right: 10%;
+        }
+
+        #contato form label {
+            font-size: 20px;
+        }
+
+        #contato form{
+            padding: 30px;
+        }
+
+        .campo input {
+            height: 55px;
+        }
+
+        footer p {
+            font-size: 10px;
+        }
     }
 }
