--- a/style.css
+++ b/style.css
@@ -547,7 +547,7 @@ footer svg:hover {
         width: 100%;
         margin-bottom: 15%;
     }
-
+}
     @media screen and (max-width:1000px) {
         .alinhamento img {
             width: 70%;
@@ -681,4 +681,40 @@ footer svg:hover {
             font-size: 10px;
         }
     }
-}
+
+    @media screen and (max-width: 600px) {
+        .conteudo-banner h2 {
+            font-size: 50px;
+        }
+
+        .campo input {
+            height: 40px;
+        }
+
+        #contato {
+            padding-top: 300px;
+        }
+
+        #contato form {
+            width: 90%;
+            padding: 22px;
+        }
+
+        #contato form button {
+            height: 45px;
+            font-size: 15px;
+        }
+
+        #contato .conteudo-contato {
+            right: 20px;
+        }
+
+        #contato h2 {
+            margin-right: 27%;
+            font-size: 30px;
+        }
+
+        .campo input {
+            font-size: 17px;
+        }
+    }
