--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ header div.container-grid {
     backdrop-filter: blur(10px);
     border-radius: 20px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.292);
-    
+
 }
 
 .card img {
@@ -450,7 +450,7 @@ footer svg:hover {
         display: none;
 
     }
-  
+
     #sobre {
         padding: 100px;
     }
@@ -486,7 +486,7 @@ footer svg:hover {
 
 @media screen and (max-width: 1100px) {
     .alinhamento img {
-       width: 55%;
+        width: 55%;
     }
 
 
@@ -534,187 +534,261 @@ footer svg:hover {
         backdrop-filter: blur(15px);
         border-radius: 20px;
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.647);
-        
+
     }
 
     #contato img {
         width: 80%;
         right: 0;
-     
+
     }
 
-    #contato .campo, .campo-textarea {
+    #contato .campo,
+    .campo-textarea {
         width: 100%;
         margin-bottom: 15%;
     }
 }
-    @media screen and (max-width:1000px) {
-        .alinhamento img {
-            width: 70%;
-            left: 17%;
-            opacity: 40%;
-        }
 
-        #sobre {
-            padding: 50px;
-        }
-
-        #sobre .conteudo-sobre {
-            padding: 80px;
-            padding-right: 40px;
-        }
+@media screen and (max-width:1000px) {
+    .alinhamento img {
+        width: 70%;
+        left: 17%;
+        opacity: 40%;
     }
 
-    @media screen and (max-width: 900px) {
-        .banner h2 {
-            font-size: 55px;
-            align-items: center;
-        }
-
-        .alinhamento img {
-            width: 80%;
-            left: 11%;
-            opacity: 30%;
-        }
-
-        .alinhamento {
-            justify-content: center;
-        }
-
-        .conteudo-banner p {
-            font-size: 28px;
-            text-align: center;
-        }
-
-        .conteudo-banner h2 {
-            text-align: center;
-        }
-
-
-        #sobre .container-sobre {
-            padding: 0;
-            margin-left: 0;
-        }
-
-        #sobre .conteudo-sobre {
-            padding: 60px;
-        }
-
-        #sobre {
-            padding: 60px;
-        }
-
-        #sobre .texto-sobre {
-            margin-left: 55%;
-            margin-right: -5%;
-        }
-
-        #sobre h2 {
-            font-size: 20px;
-        }
-
-        #sobre p {
-            font-size: 17px;
-        }
-
-        #sobre img {
-            top: 0;
-            right: 50%;
-            height: 100%;
-        }
-
-        #cases p {
-            font-size: 30px;
-        }
-
-        #contato img {
-            width: 100%;
-        }
-
-        .redes-sociais {
-            width: 40%;
-        }
+    #sobre {
+        padding: 50px;
     }
 
-    @media screen and (max-width: 700px) {
-        #sobre {
-            padding: 0;
-        }
-        #sobre .container-sobre {
-            display: flex;
-            flex-direction: column;
-        }
+    #sobre .conteudo-sobre {
+        padding: 80px;
+        padding-right: 40px;
+    }
+}
 
-        #sobre .conteudo-sobre {
-            background-color: transparent;
-        }
+@media screen and (max-width: 900px) {
+    .banner h2 {
+        font-size: 55px;
+        align-items: center;
     }
 
-    @media screen and (max-width: 700px) {
-        #sobre img {
-            height: 75%;
-            top: 65px;
-        }
-
-        #contato {
-            gap: 40px;
-        }
-
-        #contato .conteudo-contato {
-            width: 80%;
-            right: 10%;
-        }
-
-        #contato form label {
-            font-size: 20px;
-        }
-
-        #contato form{
-            padding: 30px;
-        }
-
-        .campo input {
-            height: 55px;
-        }
-
-        footer p {
-            font-size: 10px;
-        }
+    .alinhamento img {
+        width: 80%;
+        left: 11%;
+        opacity: 30%;
     }
 
-    @media screen and (max-width: 600px) {
-        .conteudo-banner h2 {
-            font-size: 50px;
-        }
-
-        .campo input {
-            height: 40px;
-        }
-
-        #contato {
-            padding-top: 300px;
-        }
-
-        #contato form {
-            width: 90%;
-            padding: 22px;
-        }
-
-        #contato form button {
-            height: 45px;
-            font-size: 15px;
-        }
-
-        #contato .conteudo-contato {
-            right: 20px;
-        }
-
-        #contato h2 {
-            margin-right: 27%;
-            font-size: 30px;
-        }
-
-        .campo input {
-            font-size: 17px;
-        }
+    .alinhamento {
+        justify-content: center;
     }
+
+    .conteudo-banner p {
+        font-size: 28px;
+        text-align: center;
+    }
+
+    .conteudo-banner h2 {
+        text-align: center;
+    }
+
+
+    #sobre .container-sobre {
+        padding: 0;
+        margin-left: 0;
+    }
+
+    #sobre .conteudo-sobre {
+        padding: 60px;
+    }
+
+    #sobre {
+        padding: 60px;
+    }
+
+    #sobre .texto-sobre {
+        margin-left: 55%;
+        margin-right: -5%;
+    }
+
+    #sobre h2 {
+        font-size: 20px;
+    }
+
+    #sobre p {
+        font-size: 17px;
+    }
+
+    #sobre img {
+        top: 0;
+        right: 50%;
+        height: 100%;
+    }
+
+    #cases p {
+        font-size: 30px;
+    }
+
+    #contato img {
+        width: 100%;
+    }
+
+    .redes-sociais {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #sobre {
+        padding: 0;
+    }
+
+    #sobre .container-sobre {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #sobre .conteudo-sobre {
+        background-color: transparent;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #sobre img {
+        height: 75%;
+        top: 65px;
+    }
+
+    #contato {
+        gap: 40px;
+    }
+
+    #contato .conteudo-contato {
+        width: 80%;
+        right: 10%;
+    }
+
+    #contato form label {
+        font-size: 20px;
+    }
+
+    #contato form {
+        padding: 30px;
+    }
+
+    .campo input {
+        height: 55px;
+    }
+
+    footer p {
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .banner {
+        height: 120vh;
+    }
+
+    .conteudo-banner h2 {
+        font-size: 40px;
+    }
+
+    .alinhamento img {
+        width: 90%;
+        top: 77%;
+        left: 6%;
+    }
+
+    #sobre {
+        height: 900px;
+    }
+
+    #sobre img {
+        position: unset;
+        width: 100%;
+        border: none;
+        border-radius: unset;
+    }
+
+    #sobre .texto-sobre {
+        margin: 50px;
+    }
+
+    #sobre p {
+        font-size: 22px;
+    }
+
+    #sobre h2 {
+        font-size: 30px;
+    }
+
+    #sobre .container-sobre {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
+
+    #sobre .conteudo-sobre {
+        padding: 0;
+    }
+
+    #cases p {
+        font-size: 25px;
+    }
+
+    .campo input {
+        height: 40px;
+    }
+
+    #contato {
+        padding-top: 300px;
+    }
+
+    #contato form {
+        width: 90%;
+        padding: 22px;
+    }
+
+    #contato form button {
+        height: 45px;
+        font-size: 15px;
+    }
+
+    #contato .conteudo-contato {
+        right: 20px;
+    }
+
+    #contato h2 {
+        margin-right: 27%;
+        font-size: 30px;
+    }
+
+    .campo input {
+        font-size: 17px;
+    }
+
+    footer {
+        padding-bottom: 40px;
+        padding-top: 70px;
+    }
+
+    footer .container-grid {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+    .redes-sociais {
+        width: 65%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    #cases p {
+        font-size: 20px;
+    }
+
+    .card img {
+        width: 250px;
+    }
+}
