--- a/style.css
+++ b/style.css
@@ -217,17 +217,17 @@ header div.container-grid {
 
 .container-cards {
     width: 100%;
-    gap: 100px;
+    /* gap: 100px; */
 
     display: flex;
     justify-content: space-between;
 
-    padding: 150px;
-    overflow-x: auto;
-    flex-basis: unset;
+    padding: 50px;
+    /* overflow-x: auto; */
+    /* flex-basis: unset; */
 }
 
-.card {
+/* .card {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -246,16 +246,58 @@ header div.container-grid {
     border-radius: 38px;
     padding: 30px;
     flex-shrink: 0;
-}
+} */
 
-.card h2 {
+.card-row {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    min-width: auto;
+    width: 100%;
+    height: 500px;
+  }
+  
+  .card {
+    position: relative;
+    background-color: #232f9c40;
+    height: 400px;
+    width: 280px;
+    margin: 10px;
+    padding: 25px;
+    overflow: hidden;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.292);
+    border-radius: 20px;
+    backdrop-filter: blur(10px);
+    transition: height 0.3s, box-shadow 0.3s;
+  }
+  
+  .card:hover {
+    height: 410px;
+    box-shadow: 20px 20px 40px 0px rgba(0,0,0,0.5);
+  }
+  
+  .card-image {
+    /* center horizontally overflown image */
+    position: absolute;
+    margin: auto;
+    right: 26px;
+    height: 220px;
+    min-width: 80%;
+    transition: height 0.3s, opacity 0.3s;
+  }
+  .card-image.selected {
+    height: 410px;
+    opacity: 0.3;
+  }
+
+
+.card-row h2 {
     text-align: center;
 
     font-family: 'Kdam Thmor Pro';
     font-size: 30px;
     font-weight: 100;
-
-    padding: 40px;
+    margin-top: 270px;
     color: white;
 }
 
@@ -464,9 +506,9 @@ footer svg:hover {
         padding: 100px;
     }
 
-    .container-cards {
+    /* .container-cards {
         padding: 100px;
-    }
+    } */
 
     #contato img {
         margin: 0;
@@ -563,7 +605,7 @@ footer svg:hover {
     .alinhamento img {
         width: 70%;
         left: 17%;
-        opacity: 40%;
+        opacity: 100%;
     }
 
     #sobre {
@@ -573,6 +615,14 @@ footer svg:hover {
     #sobre .conteudo-sobre {
         padding: 80px;
         padding-right: 40px;
+    }
+
+    #contato {
+        height: 1000px;
+    }
+
+    #contato img {
+        display: none;
     }
 }
 
@@ -590,6 +640,10 @@ footer svg:hover {
 
     .alinhamento {
         justify-content: center;
+    }
+
+    nav.menu {
+        z-index: 2;
     }
 
     .conteudo-banner p {
@@ -632,6 +686,15 @@ footer svg:hover {
         top: 0;
         right: 50%;
         height: 100%;
+    }
+
+    .container-cards {
+        overflow-x: auto;
+        padding: 25px
+    }
+
+    .card-row {
+        min-width: 350px;
     }
 
     #cases p {
@@ -752,6 +815,7 @@ footer svg:hover {
 
     #contato {
         padding-top: 300px;
+        height: 800px;
     }
 
     #contato form {
@@ -797,7 +861,7 @@ footer svg:hover {
         font-size: 20px;
     }
 
-    .card img {
-        width: 250px;
+    #contato {
+        height: 700px;
     }
 }
